array.island.Island.scala.error
Compilation error:
Island:4: error: identifier expected but integer literal found.
  var niveauActuel:Int = num[0]
                             ^Island:5: error: ']' expected but ';' found.
  for (n<-1 to num.length -1){
^